Choralies : update reunion 25 juillet

--- a/generator/asset/element/renderer/choralies_render_Affiches_for_left_zone.js/less/choralies_render_Affiches_for_left_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_left_zone.js/less/choralies_render_Affiches_for_left_zone.less
@@ -23,6 +23,7 @@
 			float:none;
 			width:100%;
 			margin-bottom:2%;
+			margin-top:2%;
 		}
 
 		.affiche_Dates{
@@ -40,7 +41,7 @@
 			font-weight:bold;
 			font-size:110%;
 			padding-bottom:0.5em;
-			border-bottom:1px solid @black;
+			border-bottom:0px solid @black;
 		}
 		.affiche_Price{
 			float:right;
@@ -61,28 +62,36 @@
 			font-weight:400;
 			.location_small;
 			display:block;
-			margin-bottom:0.8em;
+			margin-bottom:0.2em;
+			margin-top:0.6em;
 			padding-bottom:0.2em;
-			border-bottom:1px solid @black;
+			border-bottom:0px solid @black;
+			line-height:20px;
 
+		}
+				hr{
+			border-top:1px solid @black;
+			border-bottom:0px;
+			height:1px;
+			margin:0;
+			display:block;
 		}
 
 	}	
 
 }
 
-
-	.affiche_counter{
-		position:absolute;
-		right:5px;
-		bottom:5px;
-		color:@gray;
-	}
-	.affiches_number{
-		color:@grayDark;
-		margin-left:20px;
-		font-size:90%;
-	}
+.affiche_counter{
+	position:absolute;
+	right:5px;
+	bottom:5px;
+	color:@gray;
+}
+.affiches_number{
+	color:@grayDark;
+	margin-left:20px;
+	font-size:100%;
+}
 
 
 
