--- a/generator/asset/element/renderer/choralies_render_Affiches_for_main_public_zone.js/less/choralies_render_Affiches_for_main_public_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_main_public_zone.js/less/choralies_render_Affiches_for_main_public_zone.less
@@ -15,6 +15,7 @@
 			width:40%;
 			margin-bottom:2%;
 			margin-right:2%;
+			margin-top:2%;
 		}
 
 		.affiche_Dates{
@@ -23,7 +24,7 @@
 			padding:0 1%;
 			margin-bottom:2%;
 			color:@pink;
-			font-size:120%;
+			font-size:110%;
 			background-color:@greenMedium;
 
 		}
@@ -31,7 +32,7 @@
 			color:@pink;
 			font-weight:bold;
 			font-size:120%;
-			padding-bottom:0.5em;
+			padding-bottom:0.3em;
 			border-bottom:0px solid @black;
 		}
 		.affiche_Price{
@@ -53,11 +54,19 @@
 			font-weight:400;
 			.location_small;
 			display:inline-block;
-			margin-bottom:0.8em;
+			margin-bottom:0.2em;
 			margin-top:0.6em;
-			padding-bottom:0.8em;
+			padding-bottom:0.3em;
+			line-height:25px;
 			border-bottom:0px solid @black;
 
+		}
+				hr{
+			border-top:1px solid @black;
+			border-bottom:0px;
+			height:1px;
+			margin:0;
+			display:block;
 		}
 
 	}	
