--- a/generator/asset/element/renderer/choralies_render_Affiches_for_main_zone.js/less/choralies_render_Affiches_for_main_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_main_zone.js/less/choralies_render_Affiches_for_main_zone.less
@@ -55,11 +55,19 @@
 			font-weight:400;
 			.location_small;
 			display:inline-block;
-			margin-bottom:0.8em;
+			margin-bottom:0.2em;
 			margin-top:0.6em;
-			padding-bottom:0.8em;
+			padding-bottom:0.5em;
+			line-height:35px;
 			
 
+		}
+		hr{
+			border-top:1px solid @black;
+			border-bottom:0px;
+			height:1px;
+			margin:0;
+			display:block;
 		}
 
 	}	
