--- a/generator/asset/element/renderer/choralies_render_Announces_for_right_push.js/less/choralies_render_Announces_for_right_push.less
+++ b/generator/asset/element/renderer/choralies_render_Announces_for_right_push.js/less/choralies_render_Announces_for_right_push.less
@@ -45,11 +45,19 @@
 			display:block;
 		}
 	}
-	
-	
-
 }
 
-
-
+@media (max-width: 768px) 	{
+	.push_div_zone{
+		font-size:55%;
+		padding-bottom:2%;
+		
+		.announce_body{
+			margin:2%;
+			.announce_Title{
+				padding:1%;
+			}
+		}
+	}
+}
 
