--- a/generator/asset/element/renderer/choralies_render_Pictures_full_for_main.js/less/choralies_render_Pictures_full_for_main.less
+++ b/generator/asset/element/renderer/choralies_render_Pictures_full_for_main.js/less/choralies_render_Pictures_full_for_main.less
@@ -38,7 +38,7 @@
 	        position:absolute;
 	        bottom:15px;
 	        left:0;
-	        width:98%;
-	        .legendeImage
+	        width:97%;
+	        .legendeImage;
 	    }
 	}
