--- a/generator/asset/element/renderer/choralies_render_Articles_for_main_zone.js/less/choralies_render_Articles_for_main_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Articles_for_main_zone.js/less/choralies_render_Articles_for_main_zone.less
@@ -32,9 +32,9 @@
 			color:@gray;
 			font-weight:400;
 			font-style:italic;
-			display:block;
-			width:100%;
-			text-align:center;
+			display:inline;
+			/*width:100%;
+			text-align:center;*/
 			font-size:80%;
 			margin-bottom:0%;
 		}
@@ -44,7 +44,6 @@
 	}	
 
 }
-
 
 	.article_counter{
 		position:absolute;
