--- a/generator/asset/element/renderer/choralies_render_RSS_for_header.js/less/choralies_render_RSS_for_header.less
+++ b/generator/asset/element/renderer/choralies_render_RSS_for_header.js/less/choralies_render_RSS_for_header.less
@@ -8,13 +8,13 @@
 	margin-right:1%;
 	margin-top:1%;
 	overflow:hidden;
-	width:38%;
+	width:40%;
 	float:right;
 	
 	.rss_body{
 		.lightBackground15;
 		color:@white;
-		padding:0% 2% 2% 2%;
+		padding:5px 2% 2% 2%;
 		font-size:33%;
 		-webkit-box-sizing: border-box; 
 		-moz-box-sizing: border-box;   
