--- a/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
@@ -35,9 +35,9 @@
 		
 		.twitter_title{
 			background-color:transparent;
-			color:@green;
+			color:@blueDark;
 			padding-top:0em;
-			i { color:@green;}
+			i { color:@blueDark;}
 			img {
 		  		float:none;
 		  		border-radius : 3px;
@@ -86,16 +86,17 @@
 		
 		.twitter_title{
 			background-color:transparent;
-			color:@green;
+			color:@blueDark;
 			padding-top:0em;
 			font-weight:bold;
-			i { color:@green;}
+			i { color:@blueDark;}
 			img {
 		  		float:none;
 		  		border-radius : 3px;
 		  		height:80%;
 		  		margin-top:8px;
 		  	}
+		  	font-weight:bold;
 		}
 		.twitter_Content{
 			margin-left:0em;
@@ -116,3 +117,9 @@
 		color:@grayLightPlus;
 		font-style:italic;
 	}	
+
+@media (max-width: 768px) 	{
+	#${zoneName} .scrollContentEachLogoLeft .scrollContent{
+		font-size:75%;
+	}
+}
