--- a/generator/asset/element/layout/choralies_mobile/less/functions.less
+++ b/generator/asset/element/layout/choralies_mobile/less/functions.less
@@ -163,8 +163,15 @@
 
 }
 .yourcast2Mobile{
-	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 98% 50%;
-	background-size:auto 80%;
+	/*background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 98% 50%;
+	background-size:auto 80%;*/
+    background-color:transparent;
+    background-image:  url('../img/background_choralies.png'), url('../img/experimentation_yourcast_supralog1.png');
+    background-position: 1% top, 99% 50%;
+	background-repeat:no-repeat, no-repeat;
+	/*background-attachment:fixed fixed;*/
+    -moz-background-size:auto 100%, auto 90%; /* Old Firefox */
+	background-size:auto 100%, auto 90% ;	
 }
 
 .legendeImage {
