--- a/generator/asset/element/layout/choralies_mobile/less/style.less
+++ b/generator/asset/element/layout/choralies_mobile/less/style.less
@@ -25,12 +25,12 @@ body
 body
 {
     background-color:@black;
-    background-image:  url('../img/background_choralies.png'), url('../img/yourcast_background_mobile.jpg');
-    background-position: 2% top, left bottom;
-	background-repeat:no-repeat, no-repeat;
+    background-image:  url('../img/yourcast_background_mobile.jpg');
+    background-position: left bottom;
+	background-repeat:no-repeat;
 	/*background-attachment:fixed fixed;*/
-    -moz-background-size:40%, 200% ; /* Old Firefox */
-	background-size:40%, 200% ;
+    -moz-background-size:200% ; /* Old Firefox */
+	background-size:200% ;
     font-family:@baseFontFamily;
     font-size:2.5em;
 	width: 100%; 
@@ -91,7 +91,23 @@ body
 	text-decoration:none;
 	z-index:1000;
 }
-
+@media (max-width: 768px) 	{
+	.design_signature a{
+		position:absolute;
+		right:-35px;
+		bottom:37px;
+		color:@grayLighter;
+		font-size:45%;
+		text-decoration:none;
+		z-index:1000;
+		
+		transform:rotate(270deg);
+	    -moz-transform:rotate(270deg);
+	    -o-transform:rotate(270deg);
+	    -webkit-transform:rotate(270deg);
+	    -ms-transform:rotate(270deg);
+	}
+}
 #date_time
 {
 	float:left;
