Problème de less

--- a/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
@@ -2,7 +2,7 @@
 
 
 
-.scrollContentEachLogoLeft .scrollContent{
+.scrollContentLeft .scrollContent{
 
 
 	/* Twitter */
@@ -108,18 +108,18 @@
 	}	
 
 @media (max-width: 768px) 	{
-	#${zoneName} .scrollContentEachLogoLeft .scrollContent{
+	#${zoneName} .scrollContentLeft .scrollContent{
 		font-size:55%;
 		line-height:auto;
 	}
 	
-	.scrollContentEachLogoLeft{
+	.scrollContentLeft{
 	    span{
 	    	line-height:100%;
 	    }
 	}	
 	
-	.scrollContentEachLogoLeft .scrollContent{
+	.scrollContentLeft .scrollContent{
 		.tweet{  	
 			line-height:100%;	
 			.twitter_title{
