--- a/generator/asset/element/zone/mobileMainZone_choralies/style.less
+++ b/generator/asset/element/zone/mobileMainZone_choralies/style.less
@@ -5,7 +5,7 @@
 .pushContainer{
 	float:left;
     font-size: 100%;
-    /*height: 74%;*/
+    height: 74%;
     width: 98%;
     margin-right:1%;
 	-webkit-box-sizing: border-box; 
@@ -31,10 +31,10 @@
    }
      
 #${zoneName} {
-  /*height: 100%;
+  height: 100%;
   position: absolute;
   width: 100%;
-  overflow: hidden;*/
+  overflow: hidden;
 }
 
 #${zoneName} .title{
