Last changes in less files

--- a/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
@@ -108,7 +108,7 @@
 	}	
 
 @media (max-width: 768px) 	{
-	#${zoneName} .scrollContentLeft .scrollContent{
+	.scrollContentLeft .scrollContent{
 		font-size:55%;
 		line-height:auto;
 	}
