--- a/generator/asset/element/zone/mainZone_irsam/style.less
+++ b/generator/asset/element/zone/mainZone_irsam/style.less
@@ -1,32 +1,38 @@
-#zone1 {    
-    font-size:100%;
-    position: absolute;
-    width : 100%;
-    height : 100%;
-    background-color: transparent;
-}
 
-.logo {
-    position : relative;
-    margin-left: 1%;
-    top: 0px;
-    width:132px;
-    height:115px;
-    background : transparent no-repeat;
-    img{
-   		width:132px;
-    	height:115px;
+#${zoneName} {
+    font-size:          10vh;
+    position:           absolute;
+    top:                0px;
+    left:               0px;
+    width:              100%;
+    height:             75%;
+    background-color:   transparent;
+    padding-top:        12%;
+}
+#${zoneName} #${zoneName}_logo {
+    position :          absolute;
+    left:               1%;
+    top:                2%;
+    height:             16%;
+    background :        transparent no-repeat;
+    img {
+    	height:         100%;
     }
-
 }
-
-.title {
-    position : absolute;
-    top: 0px;
-    color: white;
-    font-weight:bold;
-	font-size:200%;
-	left : 0px;
-	width :100%;
-	text-align : center;
+#${zoneName} #${zoneName}_title {
+    font-size:          17vh;
+    position:           absolute;
+    top:                0px;
+    left:               0px;
+    height:             20%;
+    font-weight:        bold;
+    width:              100%;
+    text-align:         center;
+    border-bottom:      14px red solid;
+}
+#${zoneName} #${zoneName}_content {
+    width:              90%;
+    height:             100%;
+    margin:             0px auto;
+    font-size:          13vh;
 }
