--- a/generator/asset/element/layout/irsam/index.html
+++ b/generator/asset/element/layout/irsam/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />		
 
         <title>YourCast Irsam</title>
@@ -15,42 +13,28 @@
 
         $zoneScripts
 
-        <script type="text/javascript">
-
-            /**
-             *  Fin de traitement des fichiers less
-             */
-            function finTraitementLess() {
-
-                // Cache le logo de chargement
-                $('logo_loading').hide();
-
-            }
-
-            less = {
-                env: "production",
-                async: false,
-                fileAsync: true
-            };
-
-        </script>
-
     </head>
 
-    <body onload="$onLoadContent; loadScript('js/libs/less.js', true); init_date();" class="attente">
+    <body onload="$onLoadContent;
+            loadScript('js/libs/less.js', true);
+            init_date();" class="attente">
 
         <div style="display: none;" id="date_time"></div>
 
         $layoutBody
 
         <div id="logo_loading">
-            <div>
-                <img id="loading_img" src="./img/yc_loading.gif" />
+            <div id="logo">
+                <img id="loading_img" src="./img/logo_loading.jpg" />
+            </div>
+            <div id="progress">
+                <p>Chargement ...</p>
+                <progress id="chargement" value="0" max="100"></progress>
+            </div>
+            <div id="console">
+                <span>Console Yourcast</span>
+                <div id="msg_console"></div>
             </div>
         </div>
-
-        <span class="design_signature"><a href="http://c.line-design.fr">c.line-design.fr</a></span>
-
     </body>
-
 </html>
