--- a/generator/asset/element/layout/irsam/style.css
+++ b/generator/asset/element/layout/irsam/style.css
@@ -10,10 +10,163 @@
     z-index:            40;
     text-align:         left;
 }
-#logo_loading div {
+#logo_loading div#logo {
     display:            table-cell;
     vertical-align:     top;
 }
-#logo_loading div img {
+#logo_loading div#logo img {
     margin:             20px;
+}
+
+#logo_loading div#progress {
+    color:              darkslateblue;
+    font-size:          13px;
+    text-align:         center;
+    position:           absolute;
+    left:               50%;
+    top:                10%;
+    background-color:   gainsboro;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius:      5px;
+    padding:            40px;
+    border:             2px #bbb solid;
+    width:              40%;
+}
+#logo_loading #chargement {
+    display:            inline-block;
+    -moz-box-sizing:    border-box;
+    box-sizing:         border-box;
+    width:              80%;
+    height:             20px;
+    padding:            3px 3px 2px 3px;
+    background:         #333;
+    background:         -webkit-linear-gradient(#2d2d2d,#444);
+    background:         -moz-linear-gradient(#2d2d2d,#444);
+    background:         -o-linear-gradient(#2d2d2d,#444);
+    background:         linear-gradient(#2d2d2d,#444);
+    border:             1px solid rgba(0,0,0,.5);
+    border-radius:      15px;
+    box-shadow:         0 1px 0 rgba(255,255,255,.2);
+    margin:             10px;
+    margin-top:         0px;
+}
+#logo_loading #chargement::-moz-progress-bar {
+    border-radius:      10px;
+    background:         #09c;
+    background:         -moz-repeating-linear-gradient( 45deg, rgba(255,255,255,.2) 0, rgba(255,255,255,.2) 10px, rgba(255,255,255,0) 10px, rgba(255,255,255,0) 20px ), -moz-linear-gradient( rgba(255,255,255,.1) 50%, rgba(255,255,255,0) 60% ), #09c;
+    background:         repeating-linear-gradient( 45deg, rgba(255,255,255,.2) 0, rgba(255,255,255,.2) 10px, rgba(255,255,255,0) 10px, rgba(255,255,255,0) 20px ), linear-gradient( rgba(255,255,255,.1) 50%, rgba(255,255,255,0) 60% ), #09c;
+    background-size:    300px 20px, auto, auto;
+    background-position: -300px 0, top, top;
+    background-position: top right, top, top;
+    box-shadow:         0 1px 0 rgba(255,255,255,.5) inset, 0 -1px 0 rgba(0,0,0,.8) inset, 0 0 2px black;
+}
+#logo_loading #chargement::-webkit-progress-value {
+    -webkit-border-radius: 10px;
+    background:         #09c;
+    background:         -moz-repeating-linear-gradient( 45deg, rgba(255,255,255,.2) 0, rgba(255,255,255,.2) 10px, rgba(255,255,255,0) 10px, rgba(255,255,255,0) 20px ), -moz-linear-gradient( rgba(255,255,255,.1) 50%, rgba(255,255,255,0) 60% ), #09c;
+    background:         repeating-linear-gradient( 45deg, rgba(255,255,255,.2) 0, rgba(255,255,255,.2) 10px, rgba(255,255,255,0) 10px, rgba(255,255,255,0) 20px ), linear-gradient( rgba(255,255,255,.1) 50%, rgba(255,255,255,0) 60% ), #09c;
+    background-size:    300px 20px, auto, auto;
+    background-position: -300px 0, top, top;
+    background-position: top right, top, top;
+    box-shadow:         0 1px 0 rgba(255,255,255,.5) inset, 0 -1px 0 rgba(0,0,0,.8) inset, 0 0 2px black;
+}
+#logo_loading #chargement::-webkit-progress-bar{
+    background: transparent;
+}
+#logo_loading #chargement span {
+    -webkit-transition: width 1.6s linear;
+    -moz-transition: width 1.6s linear;
+    -o-transition: width 1.6s linear;
+    transition: width 1.6s linear;
+}
+
+#logo_loading #chargement_bloque {
+    display:            inline-block;
+    -moz-box-sizing:    border-box;
+    box-sizing:         border-box;
+    width:              80%;
+    height:             20px;
+    padding:            3px 3px 2px 3px;
+    background:         #333;
+    background:         -webkit-linear-gradient(#2d2d2d,#444);
+    background:         -moz-linear-gradient(#2d2d2d,#444);
+    background:         -o-linear-gradient(#2d2d2d,#444);
+    background:         linear-gradient(#2d2d2d,#444);
+    border:             1px solid rgba(0,0,0,.5);
+    border-radius:      15px;
+    box-shadow:         0 1px 0 rgba(255,255,255,.2);
+    margin:             10px;
+    margin-top:         0px;
+}
+#logo_loading #chargement_bloque::-moz-progress-bar {
+    border-radius:      10px;
+    background:         #FF5B5B;
+    background:         -moz-repeating-linear-gradient( 45deg, rgba(255,255,255,.2) 0, rgba(255,255,255,.2) 10px, rgba(255,255,255,0) 10px, rgba(255,255,255,0) 20px ), -moz-linear-gradient( rgba(255,255,255,.1) 50%, rgba(255,255,255,0) 60% ), #FF5B5B;
+    background:         repeating-linear-gradient( 45deg, rgba(255,255,255,.2) 0, rgba(255,255,255,.2) 10px, rgba(255,255,255,0) 10px, rgba(255,255,255,0) 20px ), linear-gradient( rgba(255,255,255,.1) 50%, rgba(255,255,255,0) 60% ), #FF5B5B;
+    background-size:    300px 20px, auto, auto;
+    background-position: -300px 0, top, top;
+    background-position: top right, top, top;
+    box-shadow:         0 1px 0 rgba(255,255,255,.5) inset, 0 -1px 0 rgba(0,0,0,.8) inset, 0 0 2px black;
+}
+#logo_loading #chargement_bloque::-webkit-progress-value {
+    -webkit-border-radius: 10px;
+    background:         #FF5B5B;
+    background:         -moz-repeating-linear-gradient( 45deg, rgba(255,255,255,.2) 0, rgba(255,255,255,.2) 10px, rgba(255,255,255,0) 10px, rgba(255,255,255,0) 20px ), -moz-linear-gradient( rgba(255,255,255,.1) 50%, rgba(255,255,255,0) 60% ), #FF5B5B;
+    background:         repeating-linear-gradient( 45deg, rgba(255,255,255,.2) 0, rgba(255,255,255,.2) 10px, rgba(255,255,255,0) 10px, rgba(255,255,255,0) 20px ), linear-gradient( rgba(255,255,255,.1) 50%, rgba(255,255,255,0) 60% ), #FF5B5B;
+    background-size:    300px 20px, auto, auto;
+    background-position: -300px 0, top, top;
+    background-position: top right, top, top;
+    box-shadow:         0 1px 0 rgba(255,255,255,.5) inset, 0 -1px 0 rgba(0,0,0,.8) inset, 0 0 2px black;
+}
+#logo_loading #chargement_bloque::-webkit-progress-bar{
+    background: transparent;
+}
+#logo_loading #chargement_bloque span {
+    -webkit-transition: width 1.6s linear;
+    -moz-transition: width 1.6s linear;
+    -o-transition: width 1.6s linear;
+    transition: width 1.6s linear;
+}
+
+#logo_loading div#console {
+    color:              darkslateblue;
+    font-size:          13px;
+    text-align:         center;
+    position:           absolute;
+    left:               50%;
+    top:                40%;
+    background-color:   gainsboro;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius:      5px;
+    padding:            40px;
+    border:             2px #bbb solid;
+    height:             40%;
+    width:              40%;
+}
+#logo_loading div#console div {
+    text-align:         left;
+}
+#logo_loading div#console div#msg_console {
+    height:             80%;
+    margin-top:         5%;
+    overflow-y:         auto;
+    border:             1px rgba(22, 22, 22, 0.6) solid;
+}
+
+#logo_loading div#console div .exception {
+    background-color:   #FFD51E;
+    padding:            5px;
+    color:              #222;
+}
+#logo_loading div#console div .information {
+    background-color:   #7FC7FF;
+    padding:            5px;
+    color:              #222;
+}
+#logo_loading div#console div .erreur {
+    background-color:   #F99;
+    padding:            5px;
+    color:              #222;
 }
