--- a/generator/asset/element/zone/mainZone_irsam/style.less
+++ b/generator/asset/element/zone/mainZone_irsam/style.less
@@ -5,9 +5,7 @@
     top:                0px;
     left:               0px;
     width:              100%;
-    height:             75%;
     background-color:   transparent;
-    padding-top:        12%;
 }
 #${zoneName} #${zoneName}_logo {
     position :          absolute;
@@ -31,8 +29,10 @@
     border-bottom:      14px red solid;
 }
 #${zoneName} #${zoneName}_content {
+    position:           absolute;
     width:              90%;
-    height:             100%;
-    margin:             0px auto;
+    height:             75%;
+    bottom:             0px;
+    left:               5%;
     font-size:          13vh;
 }
