Improved bus and hyperplanning renderers

--- a/generator/asset/element/renderer/polytech_render_bus_main.js/less/polytech_render_bus_main.less
+++ b/generator/asset/element/renderer/polytech_render_bus_main.js/less/polytech_render_bus_main.less
@@ -37,11 +37,11 @@
   .tableTime  {
     text-align : center;
     width : 15%;
-    text-size:120%;
-    .location-edt-td;
+    font-size:120%;
+    .time-passage-td;
     padding:5px;
   }
-  .tableColor{
+  #tableColor{
     width:2%;
     background: @grayLighter;
   }
