Improved Polytech Client

--- a/generator/asset/element/renderer/polytech_render_bus_main.js/less/polytech_render_bus_main.less
+++ b/generator/asset/element/renderer/polytech_render_bus_main.js/less/polytech_render_bus_main.less
@@ -55,11 +55,10 @@
 }
 
 .time-passage-td{
-  background: @grayLighter url('../img/location_white.png') no-repeat center center;
+  background: @grayLighter no-repeat center center;
 }
 
 .passage-terminus-table{
-  background-image: url('../img/left_arrow_edt_blue.png');
   background-repeat: no-repeat;
   background-position: left center;
 }
