--- a/generator/asset/element/renderer/polytech_render_hyperplanning_main.js/less/polytech_render_hyperplanning_main.less
+++ b/generator/asset/element/renderer/polytech_render_hyperplanning_main.js/less/polytech_render_hyperplanning_main.less
@@ -17,10 +17,10 @@
     .edt-header-background;
     color:@white;
     text-align : center;
-    width : 20%;
+    width : 15%;
     font-weight : 500;
     line-height:100%;
-    padding:0.5em 0.1em 0.5em 0.1em;
+    padding:0.4em 0.1em 0.4em 0.1em;
     font-size: 120%;
     text-shadow: 1px 1px 2px #222;
 
@@ -75,17 +75,15 @@
 }
 
 .location-edt-td{
-  background: @grayLighter url('../img/location_white.png') no-repeat center center;
+  background: @grayLighter  no-repeat center center;
 }
 
 .edt-summary-table{
-  background-image: url('../img/left_arrow_edt_blue.png');
   background-repeat: no-repeat;
   background-position: left center;
 }
 
 .edt-summary-table_in_progress{
-  background-image: url('../img/left_arrow_edt.png');
   background-repeat: no-repeat;
   background-position: left center;
 }
