Polytech Layout : Added header design

--- a/generator/asset/element/layout/polytech/index.html
+++ b/generator/asset/element/layout/polytech/index.html
@@ -45,7 +45,7 @@
 	<body onload="$onLoadContent; loadScript('js/libs/less.js',true); init_date();" class="public">
 
 		
-		
+		<div id="header"></div>
 		<div id="date_time" class="date_with_months"></div>
 		$layoutBody		
 				
