--- a/generator/asset/element/layout/irsam/index.html
+++ b/generator/asset/element/layout/irsam/index.html
@@ -15,9 +15,7 @@
 
     </head>
 
-    <body onload="$onLoadContent;
-            loadScript('js/libs/less.js', true);
-            init_date();" class="attente">
+    <body onload="$onLoadContent; init_date();" class="attente">
 
         <div style="display: none;" id="date_time"></div>
 
