--- a/generator/asset/element/layout/ca/index.html
+++ b/generator/asset/element/layout/ca/index.html
@@ -15,33 +15,11 @@
 
         $zoneScripts
 
-        <script type="text/javascript">
-
-            /**
-             *  Fin de traitement des fichiers less
-             */
-            function finTraitementLess() {
-
-                // Cache le logo de chargement
-                $('logo_loading').hide();
-
-            }
-
-            less = {
-                env: "production",
-                async: false,
-                fileAsync: true
-            };
-
-        </script>
-
         <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'>
 
     </head>
 
-    <body onload="$onLoadContent;
-                        loadScript('js/libs/less.js', true);
-                        init_date();" class="attente">
+    <body onload="$onLoadContent; init_date();" class="attente">
 
         <div id="date_time"></div>
         $layoutBody
