--- a/generator/asset/element/layout/choralies_mobile/index-mobile.html
+++ b/generator/asset/element/layout/choralies_mobile/index-mobile.html
@@ -1,71 +1,58 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />		
-		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;" />
-		
-		<title>YourCast Choralies - Version mobile</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />		
+        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;" />
 
-		<script type="text/javascript" src="js/libs/prototype.js"></script>
-		<script type="text/javascript" src="js/utils.js"></script>
+        <title>YourCast Choralies - Version mobile</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+
+        <script type="text/javascript" src="js/libs/prototype.js"></script>
+        <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/date.js"></script>
         <script type="text/javascript" src="js/controler.js"></script>
-		
-		<link href="img/climacons-font/webfont/climacons-font.css" rel="stylesheet" type="text/css" />
-		
-		$zoneScripts
 
-		<script type="text/javascript">
+        <link href="img/climacons-font/webfont/climacons-font.css" rel="stylesheet" type="text/css" />
 
-            /**
-             *  Fin de traitement des fichiers less
-             */
-            function finTraitementLess() {
-                
-                // Cache le logo de chargement
-                $('logo_loading').hide();
+        $zoneScripts
 
-            }
-                
-		    less = {
-		        env: "production",
-		        async: false,
-		        fileAsync: true
-		    };
-		    
-		</script>
-				
-		<link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'>
-		
-	</head>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'>
 
-	<body onload="$onLoadContent; loadScript('js/libs/less.js',true);" class="mobile">
+    </head>
 
-	<div id="headerZone">
-		<span class="logo" id="headerZone_logo"></span>
-		<span class="title" id="headerZone_title"></span>
-		<span class="year">2013</span>
-	</div>
-		
-		$layoutBody
-				
-		<div id="logo_loading">
-			<div>
-				<img id="loading_img" src="./img/yc_loading.gif" />
-			</div>
-		</div>
-		<span class="design_signature"><a href="http://c.line-design.fr">c.line-design.fr</a></span>
-	</body>
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <body onload="$onLoadContent;" class="mobile">
 
-  ga('create', 'UA-42734631-2', 'supralog.com');
-  ga('send', 'pageview');
+        <div id="headerZone">
+            <span class="logo" id="headerZone_logo"></span>
+            <span class="title" id="headerZone_title"></span>
+            <span class="year">2013</span>
+        </div>
 
-</script>
+        $layoutBody
+
+        <div id="logo_loading">
+            <div>
+                <img id="loading_img" src="./img/yc_loading.gif" />
+            </div>
+        </div>
+        <span class="design_signature"><a href="http://c.line-design.fr">c.line-design.fr</a></span>
+    </body>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-42734631-2', 'supralog.com');
+        ga('send', 'pageview');
+
+    </script>
 </html>
 
