--- a/generator/asset/element/layout/glc/index.html
+++ b/generator/asset/element/layout/glc/index.html
@@ -1,56 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-    <title>YourCast</title>
-    <script type="text/javascript" src="js/libs/prototype.js"></script>
-    <script type="text/javascript" src="js/utils.js"></script>
-    <script type="text/javascript" src="js/date.js"></script>
-    <script type="text/javascript" src="js/controler.js"></script>
+        <title>YourCast</title>
+        <script type="text/javascript" src="js/libs/prototype.js"></script>
+        <script type="text/javascript" src="js/utils.js"></script>
+        <script type="text/javascript" src="js/date.js"></script>
+        <script type="text/javascript" src="js/controler.js"></script>
 
-    <link href="img/climacons-font/webfont/climacons-font.css" rel="stylesheet" type="text/css" />
-    <link href="less/style.less" rel="stylesheet/less" id="stylePage"/>
+        <link href="img/climacons-font/webfont/climacons-font.css" rel="stylesheet" type="text/css" />
+        <link href="less/style.less" rel="stylesheet/less" id="stylePage"/>
 
-    $zoneScripts
+        $zoneScripts
 
-    <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'>
-    
-    <script type="text/javascript">
+        <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'>
 
-            /**
-             *  Fin de traitement des fichiers less
-             */
-            function finTraitementLess() {
-                
-                // Cache le logo de chargement
-                $('logo_loading').hide();
+    </head>
 
-            }
-                
-		    less = {
-		        env: "production",
-		        async: false,
-		        fileAsync: true
-		    };
-		    
-		</script>
+    <body onload="$onLoadContent; init_date();">
 
+        <div id="date_time"></div>
 
-</head>
+        $layoutBody
 
-<body onload="$onLoadContent; loadScript('js/libs/less.js',true);init_date();">
-
-<div id="date_time"></div>
-
-$layoutBody
-
-<div id="logo_loading">
-    <div>
-        <img id="loading_img" src="./img/yc_loading.gif" />
-    </div>
-</div>
-<span class="design_signature"><a href="http://c.line-design.fr">c.line-design.fr</a></span>
-</body>
+        <div id="logo_loading">
+            <div>
+                <img id="loading_img" src="./img/yc_loading.gif" />
+            </div>
+        </div>
+        <span class="design_signature"><a href="http://c.line-design.fr">c.line-design.fr</a></span>
+    </body>
 </html>
 
