Some changes in iRSAM layout

--- a/generator/asset/element/layout/irsam/index.html
+++ b/generator/asset/element/layout/irsam/index.html
@@ -23,7 +23,7 @@
 
         <div id="logo_loading">
             <div id="logo">
-                <img id="loading_img" src="./img/logo_loading.jpg" />
+                <img id="loading_img" src="./img/yc_loading.gif" />
             </div>
             <div id="progress">
                 <p>Chargement ...</p>
