Add missing images for glc layout

--- a/generator/asset/element/layout/glc/less/style.less
+++ b/generator/asset/element/layout/glc/less/style.less
@@ -598,7 +598,7 @@ body
 }
 
 /* RSS feed */
-#mainZone .rss_body{
+.rss_body{
     margin-right:2.5em;
     font-weight:300;
     .rss_Title{
@@ -741,62 +741,6 @@ body
   vertical-align : middle;
   margin-top : 0.1em;
 }
-
-.tweet{
-	-moz-box-shadow: 1px 1px 1px #ccc;
-    -webkit-box-shadow: 1px 1px 1px #ccc;
-    box-shadow: 1px 1px 1px #ccc;
-}
-
-.twitter_title{
-	font-size: 100%;
-	position: relative;
-  	background-color:@white;
-    font-weight:500;
-    padding-top:0.5em;
-	i {
-		color:@gray;
-    	font-size: 90%;
-    	font-style:normal;
-    	font-weight:400;
-	}
-	img {
-  		float:left;
-  		margin : 0.2em 0.5em 0.5em 0.5em;
-  		border-radius : 3px;
-  		/*width:48px;*/
-  	}
-}
-
-
-.twitter_body{
-	background-color:@white;
-	font-weight:300;	
-	padding-bottom:0.5em;
-	margin-bottom:1px;
-	.twitter_Content{
-		-webkit-hyphens: auto;
-		-moz-hyphens: auto;
-		hyphens: auto;
-		margin-left:2.7em;
-		padding-right:0.5em;
-		a{
-			color:@blue;
-			text-decoration:none;
-		}
-		s{
-			text-decoration:none;
-		}
-	}
-	.twitter_Date{
-		color:@gray;
-		margin-right:0.5em;
-		text-align:right;
-		font-size: 90%;
-		line-height:150%;
-	}
-}
-
 
 
 
