Change informations about style for push renderers.

--- a/generator/asset/element/renderer/glc_render_ICalReader_for_push_edt.js/less/glc_render_ICalReader_for_push_edt.less
+++ b/generator/asset/element/renderer/glc_render_ICalReader_for_push_edt.js/less/glc_render_ICalReader_for_push_edt.less
@@ -1,4 +1,4 @@
-.push_div_zone4 {
+.calendar_div_push {
 	margin-bottom:0px;
 	border:1px solid rgba(0, 0, 0, 0.75);
 	border-bottom:5px solid @black;
@@ -7,7 +7,6 @@
 	color:@white;
 	font-size:50%;
 	
-	/* calendar */
 	.calendar_body{
 		margin:10px 10px 10px 10px;
 		img {
@@ -58,5 +57,5 @@
 		.calendar_dates_multiple_element_hour_top{
 			color:@white;
 		}		
-	}
+	}	
 }
