--- a/generator/asset/element/renderer/glc_render_Twitter_for_push_different_title.js/less/glc_render_Twitter_for_push_different_title.less
+++ b/generator/asset/element/renderer/glc_render_Twitter_for_push_different_title.js/less/glc_render_Twitter_for_push_different_title.less
@@ -1,51 +1,47 @@
-
-.push_div_zone4{
-    margin-bottom:0px;
-    border:1px solid rgba(0, 0, 0, 0.75);
-    border-bottom:5px solid @black;
-    .blackAlpha;
-    width:95%;
-    color:@white;
-    font-size:50%;
-
-    /* twitter */
-    .tweet{
-        -moz-box-shadow: none;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-
-    .twitter_title{
-      background-color:transparent;
-      color:@white;
-      padding-top:0.5em;
-      font-weight:500;
-      line-height:150%;
-        i {
-            color:@grayLight;
-            font-size:100%
-        }
-        img {
-        float:left;
-        margin : 0em 0.3em 0.3em 0.4em;
-        border-radius : 3px;
-        width:48px;
-        }
-    }
-
-    .twitter_body{
-        background-color:transparent;
-        color:@white;
-        padding-bottom:0.3em;
-        margin-bottom:0px;
-        .twitter_Content{
-            margin-left:4em;
-            padding-right:0.5em;
-        }
-        .twitter_Date{
-            color:@grayLight;
-            line-height:120%;
-        }
-    }
-
+.twitter_div_push {
+	margin-bottom:0px;
+	border:1px solid rgba(0, 0, 0, 0.75);
+	border-bottom:5px solid @black;
+	.blackAlpha;
+	width:95%;
+	color:@white;
+	font-size:50%;
+	
+	.tweet{
+		-moz-box-shadow: none;
+	    -webkit-box-shadow: none;
+	    box-shadow: none;
+	}
+	.twitter_title{
+	  background-color:transparent;
+	  color:@white;
+	  padding-top:0.5em;
+	  font-weight:500;
+	  line-height:150%;
+		i {
+			color:@grayLight;
+			font-size:100%
+		}
+		img {
+  		float:left;
+  		margin : 0em 0.3em 0.3em 0.4em;
+  		border-radius : 3px;
+  		width:48px;
+	  	}
+	}
+	.twitter_body{
+		background-color:transparent;
+		color:@white;
+		padding-bottom:0.3em;
+		margin-bottom:0px;
+		.twitter_Content{
+			margin-left:4em;
+			padding-right:0.5em;
+		}
+		.twitter_Date{
+			color:@grayLight;
+			line-height:120%;
+		}
+	}
+	
 }
