--- a/generator/asset/element/zone/rightZone_glc/style.less
+++ b/generator/asset/element/zone/rightZone_glc/style.less
@@ -2,7 +2,7 @@
 @import "../less/variables.less";
 
 
-#${zoneName} {
+/*#${zoneName} {
     font-size: 100%;
     height: 76%;
     width: 28%;
@@ -11,9 +11,43 @@
     right: 10px;
     top: 12%;
     .blackAlpha;
-}
+}*/
+
+#${zoneName} {
+		float:right;
+    font-size: 100%;
+    height: 76%;
+    width: 28%;
+    margin-top: 0%;
+    overflow: hidden;
+    position: relative;
+   }
 
 
 #${zoneName} .title{
 	display:none;
+}
+
+#${zoneName} .noinfo{
+	display:table;
+	.lightBackground;
+	width:91%;
+	font-size:95%;
+	font-weight:400;
+	height:100%;
+	padding:2%;
+	text-align:center;
+	div{
+		display:table-cell;
+		vertical-align:middle;
+	}
+}
+
+#${zoneName} #${zoneName}_logo {
+  width:80px;
+  overflow: hidden;
+  z-index: 1;
+  margin-left:10px;
+  display:none;
+  padding:0;
 }
